crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/positive auto negative - miss on explicit glob file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run positive-auto-negative
$ print-file src/main.ts
export const main = 'initial';
> replace-file-content package.json inputs-cache-test modified-pkg

> vp run positive-auto-negative
$ print-file src/main.ts ✗ cache miss: 'package.json' modified, executing
export const main = 'initial';
