crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/positive globs - hit on read but unmatched file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run positive-globs-reads-unmatched
$ print-file src/main.ts src/utils.ts
export const main = 'initial';
export const utils = 'initial';
> replace-file-content src/utils.ts initial modified

> vp run positive-globs-reads-unmatched
$ print-file src/main.ts src/utils.ts ✓ cache hit, replaying
export const main = 'initial';
export const utils = 'initial';

---
[vp run] cache hit, <duration> saved.
