crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/positive globs only - cache hit on second run.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run positive-globs-only
$ print-file src/main.ts
export const main = 'initial';
> vp run positive-globs-only
$ print-file src/main.ts ✓ cache hit, replaying
export const main = 'initial';

---
vp run: cache hit, <duration> saved.
