crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/positive negative globs - hit on excluded file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run positive-negative-globs
$ print-file src/main.ts
export const main = 'initial';
> replace-file-content src/main.test.ts main modified

> vp run positive-negative-globs
$ print-file src/main.ts ✓ cache hit, replaying
export const main = 'initial';

---
[vp run] cache hit, <duration> saved.
