crates/vite_task_bin/tests/e2e_snapshots/fixtures/inputs-cache-test/snapshots/positive negative globs - miss on non-excluded file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run positive-negative-globs
$ print-file src/main.ts
export const main = 'initial';
> replace-file-content src/main.ts initial modified

> vp run positive-negative-globs
$ print-file src/main.ts ✗ cache miss: content of input 'src/main.ts' changed, executing
export const main = 'modified';
